--- a/about.html
+++ b/about.html
@@ -4,7 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
+    <meta name="description" content="About Diana" />
+    <title>About Diana Holoborodko</title>
   </head>
-  <body></body>
+  <body>
+      <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Diana Holoborodko</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html#contact">Contact me </a>
+                  </li>
+            </div>
+          </div>
+        </nav>
+   
+    <h1>About me</h1>
+    <h3>Front-end developer from Kremenchuk, Ukraine</h3>
+    <div class="about-paragraphs">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+            alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+            blanditiis harum.
+          </p>
+    </div>
+    <div class="container">
+      <div class="row image__block">
+        <div class="col-12 col-sm-4 img-fluid__about">
+                <img src="./images/yoga.png" alt="image yoga_app" class="img-fluid ">
+        </div>
+        <div class="col-12 col-sm-4 img-fluid__about">
+            <img src="./images/weather.png" alt="image weather_app" class="img-fluid ">
+    </div>
+    <div class="col-12 col-sm-4 img-fluid__about">
+        <img src="./images/yogurt.png" alt="image yogurt_app" class="img-fluid ">
+</div>
+      </div>
+    </div>
+    <div id="contact">
+      <h2>📮 Contact me</h2>
+      <a href="mailto:[email]" class="email-link"> diana.holoborodko@gmail.com </a>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
