--- a/index.html
+++ b/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-</head>
-<body>
-   
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Diana" />
+    <title>Diana Holoborodko</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+      <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Diana Holoborodko</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html#contact">Contact me </a>
+                  </li>
+            </div>
+          </div>
+        </nav>
+    <h2>👋 Hi I am</h2>
+    <h1>Diana Holoborodko</h1>
+    <h3>🌏 Front-end developer, based in Germany</h3>
+    <div class="navigation-links">
+      <a href="about.html#contact" class="contact-link">Contact me</a>
+      <a href="about.html" class="about-link">About me</a>
+    </div>
+    <div class="app__wrapper">
+      <div class="yoga__container">
+          <div class="image__block ">
+              <img src="./images/yoga.png" alt="image yoga_app" class="img-fluid">
+            </div>
+            <div class="yoga__items">
+              <h2 class="yoga__title">Yoga app</h2>
+              <p class="yoga__description">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+                  aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+                  alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+                  blanditiis harum.
+                </p>
+                <button type="button" class="btn btn-primary">Launch Yoga App</button>
+            </div>
+
+      </div>
+      <div class="weather__container">
+          <div class="weather__items">
+              <h2 class="weather__title">Weather app</h2>
+              <p class="weather__description">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+                  aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+                  alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+                  blanditiis harum.
+                </p>
+                <button type="button" class="btn btn-primary">Launch Weather App</button>
+            </div>
+          <div class="image__block ">
+              <img src="./images/weather.png" alt="image weather_app" class="img-fluid">
+            </div>
+      </div>
+      <div class="yogurt__container">
+          
+          <div class="image__block ">
+              <img src="./images/yogurt.png" alt="image yogurt_app" class="img-fluid">
+            </div>
+            <div class="yogurt__items">
+                <h2 class="yogurt__title">Yogurt app</h2>
+                <p class="yogurt__description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+                    aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+                    alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+                    blanditiis harum.
+                  </p>
+                  <button type="button" class="btn btn-primary">Launch Yogurt App</button>
+              </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
