--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <h1>Diana Holoborodko</h1>
     <h3>🌏 Front-end developer, based in Germany</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact">Contact me</a>
+      <a href="about.html" class="about-link" title="About">About me</a>
     </div>
     <div class="app__wrapper">
       <div class="yoga__container">
